<resources>
    <string name="app_name">百祥充电</string>

    <string name="network_not_available">网络异常</string>
    <!-- transition name -->
    <string name="transition_search">transition_search</string>

    <string name="bt_nav_order">预约</string>
    <string name="bt_nav_charging">充电</string>
    <string name="bt_nav_mine">我的</string>

    <string name="press_again_exit">再按一次退出</string>
    <string name="title_about_us">关于</string>
    <string name="cancel">取消</string>
    <string name="about_us">关于我们</string>
    <string name="version_info">当前版本</string>
    <string name="check_update">检查更新</string>
    <string name="suggest">投诉建议</string>
    <string name="car">车辆</string>
    <string name="phoneNum">手机号</string>
    <string name="input_phoneNum">请输入手机号</string>
    <string name="code">验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="newPsd">新&#160;&#160;密&#160;&#160;码</string>
    <string name="oldPsd">旧&#160;&#160;密&#160;&#160;码</string>
    <string name="hint_psd">请输入6-16个字符</string>
    <string name="confirm_change">确认修改</string>
    <string name="psd">密&#12288;码</string>
    <string name="input_psd">请输入密码</string>
    <string name="forgot_psd">忘记密码</string>
    <string name="login">登陆</string>
    <string name="register_one">立即注册</string>
    <string name="charging">充值</string>
    <string name="build_pile">建桩</string>
    <string name="hint_code">请输入验证码</string>
    <string name="register_two">注册</string>
    <string name="user_info">个人资料</string>
    <string name="change_psd">修改密码</string>
    <string name="user_photo">头像</string>
    <string name="user_nick">昵称</string>
    <string name="user_gender">性别</string>
    <string name="email">邮箱</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="from_gallery">从相册选择</string>
    <string name="from_camera">相机</string>
    <string name="log_or_reg">登录/注册</string>
    <string name="money">余额</string>
    <string name="collection">收藏</string>
    <string name="card">充电卡</string>
    <string name="about">关于</string>
    <string name="ok">确定</string>
    <string name="verify">验证</string>
    <string name="pay_record">充值记录</string>
    <string name="pay_setting">支付设置</string>
    <string name="pay_set_psd">设置支付密码</string>
    <string name="favor_success">收藏成功</string>
    <string name="unfavor_success">取消收藏成功</string>
    <string name="app_introduce">
        山西百祥盛世网络科技有限公司成立于2016年05月10日，公司注册资金110.00万。公司目前主营几大板块：1、计算机软件开发、数据处理与存储服务，2、家用电器的销售；3、瓜果蔬菜批发，主营线农贸市场。山西百祥盛世网络科技有限公司目前主新开一大板块，新能源汽车充电桩销售及后期市场拓展业务，与国内多家大型电器上市企业签订战略合作协议，负责充电桩销售、运营及维护，保证产品质量及售后服务。公司地址位于山西省太原市小店区学府街132号华宇绿洲三期写字楼1幢C座26层。
    </string>
    <string name="car_helper">1. 蓝色车牌是小型汽车，黄色车牌是大型汽车；\n2. 小型汽车的充电电压200V--500V,大型汽车的充电电压350V--950V,充电电流10A--250A；\n3. 车辆识别码（VIN码），由17位字符组成，字母要大写；\n4. 车辆识别码，可用于绑定充电卡，实现专卡专车功能。</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="change_nick">修改昵称</string>
    <string name="exit">退出登录</string>
    <string name="connect_us">联系客服</string>
    <string name="submit">提 交</string>
    <string name="add_car">添加爱车</string>
    <string name="change_info">修改信息</string>
    <string name="car_info">车辆信息</string>
    <string name="delete">删除</string>
    <string name="unbind">解除绑定</string>
    <string name="add_card">添加充电卡</string>
    <string name="psd_prompt">*密码必须是字母和数字组合</string>
    <string name="limit_200">还可以输入200字</string>
    <string name="psd_again">确认密码</string>
    <string name="input_pay_code">请输入支付密码</string>
    <string name="pay_code">支付卡号</string>
    <string name="pay_type">支付方式</string>
    <string name="fee_sum">费用总计</string>
    <string name="pile_code">终端编号</string>
    <string name="substation_name">电站名称</string>
    <string name="batch_code">订单编号</string>
    <string name="trade_info">交易信息</string>
    <string name="fee_service">服务费</string>
    <string name="fee_parking">停车费</string>
    <string name="fee_electric">电费</string>
    <string name="charge_duration">充电时长</string>
    <string name="end_time">结束时间</string>
    <string name="start_time">开始时间</string>
    <string name="charge_info">充电信息</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_time">选择时间</string>
    <string name="today">今天</string>
    <string name="fee">费 用</string>
    <string name="power">功 率</string>
    <string name="type">类 型</string>
    <string name="no">编 号</string>
    <string name="see_details">查看详情</string>
    <string name="baidu_map">百度地图</string>
    <string name="gaode_map">高德地图</string>
    <string name="voice_navigation">语音导航</string>
    <string name="only_dc">只显示直流桩</string>
    <string name="only_ac">只显示交流桩</string>
    <string name="only_all">显示全部</string>
    <string name="only_idle">只显示空闲</string>
    <string name="stop_charge">停止充电</string>
    <string name="current">电流</string>
    <string name="voltage">电压</string>
    <string name="psd_4">密&#12288;&#12288;码</string>
    <string name="phoneNum_4">手&#160;&#160;机&#160;&#160;号</string>
    <string name="code_4">验&#160;&#160;证&#160;&#160;码</string>
    <string name="batch_4">订&#160;&#160;单&#160;&#160;号</string>
</resources>
