<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:background="@color/lv_white">
    <include layout="@layout/common_header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="42dp"
            android:orientation="horizontal">
            <TextView
                style="@style/General_Type_One"
                android:text="@string/phoneNum_4"/>
            <EditText
                android:id="@+id/psd_et_phone"
                style="@style/EditText_Input"
                android:layout_weight="16"
                android:hint="@string/input_phoneNum"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"/>
        </LinearLayout>

        <ImageView
            style="@style/Mime_Horizontal_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="42dp"
            android:orientation="horizontal">
            <TextView
                style="@style/General_Type_One"
                android:text="@string/code_4"/>
            <EditText
                android:id="@+id/psd_et_code"
                style="@style/EditText_Input"
                android:layout_weight="4"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"/>
            <Button
                android:id="@+id/psd_bt_send"
                style="@style/Button_Send_Code"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_weight="11"
                android:text="@string/send_code"/>
        </LinearLayout>

        <ImageView
            style="@style/Mime_Horizontal_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="42dp"
            android:orientation="horizontal">
            <TextView
                style="@style/General_Type_One"
                android:text="@string/newPsd"/>
            <EditText
                android:id="@+id/psd_et_psd"
                style="@style/EditText_Input"
                android:layout_weight="12"
                android:hint="@string/hint_psd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"/>
        </LinearLayout>

        <ImageView
            style="@style/Mime_Horizontal_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="42dp"
            android:orientation="horizontal">
            <TextView
                style="@style/General_Type_One"
                android:text="@string/psd_again"/>
            <EditText
                android:id="@+id/psd_et_again"
                style="@style/EditText_Input"
                android:layout_weight="12"
                android:hint="@string/hint_psd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:maxLines="1"/>
        </LinearLayout>

        <ImageView
            style="@style/Mime_Horizontal_line"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/psd_prompt"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/psd_bt_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_red_selector"
            android:text="@string/confirm_change"
            android:textColor="@color/lv_white"/>

    </LinearLayout>

</LinearLayout>