<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/common_header"/>

    <LinearLayout
        android:id="@+id/about_ll_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lv_white"
        android:padding="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/primary_text_black"
            android:textSize="@dimen/ts_lel_two"
            android:text="@string/version_info" />
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="@color/secondary_text_black"
            android:textSize="@dimen/ts_lel_two"/>

    </LinearLayout>

    <TextView
        android:id="@+id/about_ll_update"
        android:layout_marginTop="10dp"
        style="@style/Custom_TextView_First"
        android:text="@string/check_update"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/about_ll_suggest"
        android:layout_marginTop="10dp"
        style="@style/Custom_TextView_First"
        android:text="@string/suggest"/>

    <TextView
        android:id="@+id/about_ll_about"
        android:layout_marginTop="10dp"
        style="@style/Custom_TextView_First"
        android:text="@string/about_us"/>

    <TextView
        android:id="@+id/about_ll_service"
        android:layout_marginTop="10dp"
        style="@style/Custom_TextView_First"
        android:drawableRight="@drawable/ic_service"
        android:text="@string/connect_us"/>

</LinearLayout>