<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lv_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="40dp"
        android:minHeight="120dp"
        android:src="@drawable/ic_logo1" android:id="@+id/imageView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">
        <TextView
            style="@style/General_Type_One"
            android:text="@string/phoneNum"/>

        <EditText
            android:id="@+id/login_et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:background="@color/transparent"
            android:hint="@string/input_phoneNum"
            android:inputType="phone"
            android:maxLength="11"
            android:minHeight="50dp"
            android:paddingLeft="5dp"/>
    </LinearLayout>

    <ImageView
        style="@style/Mime_Horizontal_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            style="@style/General_Type_One" android:text="@string/psd"/>

        <EditText
            android:id="@+id/login_et_psd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/input_psd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="5dp"/>

        <Button
            android:id="@+id/login_bt_forgot"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/btn_red_stroke"
            android:text="@string/forgot_psd"
            android:textColor="@color/lv_red"/>
    </LinearLayout>

    <ImageView
        style="@style/Mime_Horizontal_line"/>

    <Button
        android:id="@+id/login_bt_login"
        style="@style/red_btn"
        android:layout_marginTop="30dp"
        android:text="@string/login"/>

    <Button
        android:id="@+id/login_tv_register"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin_sub"
        android:text="@string/register_one"
        android:textSize="@dimen/ts_lel_two"/>
</LinearLayout>