<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/lv_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inner_nav"
            style="@style/map_navigation_list"
            android:text="@string/voice_navigation"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/lv_bottom_divider"/>
        <TextView
            android:id="@+id/gd_nav"
            style="@style/map_navigation_list"
            android:text="@string/gaode_map"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/lv_bottom_divider"/>
        <TextView
            android:id="@+id/baidu_nav"
            style="@style/map_navigation_list"
            android:text="@string/baidu_map"/>
        <View android:layout_width="match_parent"
              android:layout_height="8dp"
              android:background="@color/lv_bottom_divider"/>
        <TextView
            android:id="@+id/nav_cancel"
            style="@style/map_navigation_list"
            android:text="@string/cancel"/>
    </LinearLayout>

</FrameLayout>
