<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_title_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#E9E9E9"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/province_line_border">

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text="@string/ok"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/select_time"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today"
                android:textColor="@color/primary_text_black"
                android:textSize="@dimen/ts_lel_two"/>

            <com.lljjcoder.citypickerview.widget.wheel.WheelView
                android:id="@+id/wheel_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </com.lljjcoder.citypickerview.widget.wheel.WheelView>

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/hour"
                android:textColor="@color/primary_text_black"
                android:textSize="@dimen/ts_lel_two"/>

            <com.lljjcoder.citypickerview.widget.wheel.WheelView
                android:layout_marginLeft="10dp"
                android:id="@+id/wheel_minute"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </com.lljjcoder.citypickerview.widget.wheel.WheelView>

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/minute"
                android:textColor="@color/primary_text_black"
                android:textSize="@dimen/ts_lel_two"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
